--- a/posts/025_scaling_number_of_speakers/index.ipynb
+++ b/posts/025_scaling_number_of_speakers/index.ipynb
@@ -220,10 +220,9 @@
     "## Improved Conclusiveness Calculation\n",
     "\n",
     "The issue is that simple keyword matching often finds 0 agreement and 0 disagreement markers, leading to 0/0 -> 5.0. We'll improve this by:\n",
-    "1. Expanding marker detection with strong/moderate patterns\n",
-    "2. Direct utterance processing (avoiding Coordination transformer to prevent StopIteration errors)\n",
-    "3. Adding debugging to see what's happening\n",
-    "4. Using weighted counts (strong markers count more than moderate ones)\n"
+    "1. Using Coordination features more effectively\n",
+    "2. Expanding marker detection\n",
+    "3. Adding debugging to see what's happening\n"
    ]
   },
   {
